# VBFTransformer

./: .gitignore  Model.py  Performance.py  Predict.py  README.md  Train.py  VBFTransformer.py  VBFTransformerDataModule.py  pyproject.toml  requirements.yaml
.github/workflows/: main.yaml
configs/: config.yaml
notebooks/: DNNClassifier.ipynb  DNNDataPreparation.ipynb  TransformerClassifier.ipynb
src/data/: VBFTransformerDataModule.py
src/models/: Model.py
src/utils/: Performance.py  Predict.py  Train.py  utils.py
tests/configs/: test_config.yaml
